--- a/trunk/ nhom06vienthonga/Source/vienthonga_06/web/plugins/fckeditor/editor/dialog/fck_image.html
+++ b/trunk/ nhom06vienthonga/Source/vienthonga_06/web/plugins/fckeditor/editor/dialog/fck_image.html
@@ -158,8 +158,7 @@ document.write( FCKTools.GetStyleHtml( GetCommonDialogCss() ) ) ;
 		</table>
 	</div>
 	<div id="divUpload" style="display: none">
-		<form id="frmUpload" method="post" target="UploadWindow" enctype="multipart/form-data"
-			action="" onsubmit="return CheckUpload();">
+		<form id="frmUpload" method="post" enctype="multipart/form-data" action="" >
 			<span fcklang="DlgLnkUpload">Upload</span><br />
 			<input id="txtUploadFile" style="width: 100%" type="file" size="40" name="NewFile" /><br />
 			<br />
