--- a/ nhom06vienthonga/Source/vienthonga_06/web/plugins/fckeditor/editor/fckdialog.html
+++ b/ nhom06vienthonga/Source/vienthonga_06/web/plugins/fckeditor/editor/fckdialog.html
@@ -780,7 +780,7 @@ document.write( Args().Title ) ;
 					<tr>
 						<td width="100%">&nbsp;</td>
 						<td nowrap="nowrap">
-							<input id="btnOk" style="visibility: hidden;" type="button" value="Ok" class="Button" onclick="Ok();" fckLang="DlgBtnOK" />
+							<input id="btnOk" type="button" value="Ok" class="Button" onclick="Ok();" fckLang="DlgBtnOK" />
 							&nbsp;
 							<input id="btnCancel" type="button" value="Cancel" class="Button" onclick="Cancel();" fckLang="DlgBtnCancel" />
 						</td>
